SET(RDSEXTR_VERSION 1.0)
SET(RDSEXTR_SOVERSION 0.1)

################### GENERAL UTIL SECTION

#SET(LIBRDSEXTR_SRC rdsextr.cc)
AUX_SOURCE_DIRECTORY(. LIBRDSEXTR_SRC)
ADD_LIBRARY(rdsextr SHARED ${LIBRDSEXTR_SRC})
SET_TARGET_PROPERTIES(rdsextr PROPERTIES VERSION ${RDSEXTR_VERSION} SOVERSION ${RDSEXTR_SOVERSION})

ADD_LIBRARY(rdsextr_static STATIC ${LIBRDSEXTR_SRC})
SET_TARGET_PROPERTIES(rdsextr_static PROPERTIES OUTPUT_NAME "rdsextr")


ADD_DEPENDENCIES(rdsextr leveldb_proj)
ADD_DEPENDENCIES(rdsextr_static leveldb_proj)


TARGET_LINK_LIBRARIES(rdsextr m)
TARGET_LINK_LIBRARIES(rdsextr pthread)
TARGET_LINK_LIBRARIES(rdsextr leveldb)

TARGET_LINK_LIBRARIES(rdsextr_static m)
TARGET_LINK_LIBRARIES(rdsextr_static pthread)
TARGET_LINK_LIBRARIES(rdsextr_static leveldb)
