SET(ARGCV_UTIL_VERSION 1.0)
SET(ARGCV_UTIL_SOVERSION 0.1)

################### GENERAL UTIL SECTION

SET(LIBARGCV_UTIL_SRC util.cc)
ADD_LIBRARY(argcv_util SHARED ${LIBARGCV_UTIL_SRC})
SET_TARGET_PROPERTIES(argcv_util PROPERTIES VERSION ${ARGCV_UTIL_VERSION} SOVERSION ${ARGCV_UTIL_SOVERSION})

ADD_LIBRARY(argcv_util_static STATIC ${LIBARGCV_UTIL_SRC})
SET_TARGET_PROPERTIES(argcv_util_static PROPERTIES OUTPUT_NAME "argcv_util")

TARGET_LINK_LIBRARIES(argcv_util m)

TARGET_LINK_LIBRARIES(argcv_util_static m)


#ADD_SUBDIRECTORY(dict)
#ADD_SUBDIRECTORY(oid)
#ADD_SUBDIRECTORY(sys)

